[package]
name = "jsdom"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "A rust javascript dom parser for web scraping"
keywords = ["jsdom", "crawler", "scraping"]
categories = ["web-programming"]
documentation = "https://docs.rs/jsdom"
repository = "https://github.com/a11ywatch/jsdom"

[dependencies]
resast = "0.5.0"
ressa = "0.8.1"
