[package]
name = "jsdom"
version = "0.0.9"
edition = "2021"
license = "MIT"
description = "A rust javascript dom parser for web scraping"
keywords = ["jsdom", "crawler", "scraping"]
categories = ["web-programming"]
documentation = "https://docs.rs/jsdom"
repository = "https://github.com/a11ywatch/jsdom"

[dependencies]
resast = "0.5.0"
ressa_r = "0.8.4"
hashbrown = { version = "0.13.2", default-features = true, optional = true }
tokio-stream = { version = "0.1.12", optional = true }
tokio = { version = "1.28.1", features = [ "rt-multi-thread", "macros", "parking_lot" ], optional = true }

[features]
default = []
hashbrown = ["dep:hashbrown"]
tokio = [ "dep:tokio", "dep:tokio-stream" ]